Removed a wrong call to my_time() before my_init() has been called.

Fix for Bug#30274 "Debug server crashes because mutex isn't initialized"